RESOLVED FIXED104746
REGRESSION (r137006): TileCache flashes to linen, rather than the background color, when scrolling fast
https://bugs.webkit.org/show_bug.cgi?id=104746
Summary REGRESSION (r137006): TileCache flashes to linen, rather than the background ...
Simon Fraser (smfr)
Reported 2012-12-11 17:15:49 PST
After r137006, tile cache flashes now flash to linen rather than the background color, making them look much worse.
Attachments
Patch, but test updates needed (5.69 KB, patch)
2012-12-11 18:29 PST, Simon Fraser (smfr)
no flags
Patch (5.71 KB, patch)
2012-12-11 22:05 PST, Simon Fraser (smfr)
darin: review+
Radar WebKit Bug Importer
Comment 1 2012-12-11 17:16:10 PST
Noam Rosenthal
Comment 2 2012-12-11 17:21:19 PST
How does one reproduce this?
Simon Fraser (smfr)
Comment 3 2012-12-11 17:35:16 PST
Scroll really fast (or hit Home/End) on a long page, like http://www.w3.org/2012/08/13-css-irc
Simon Fraser (smfr)
Comment 4 2012-12-11 18:29:38 PST
Created attachment 178942 [details] Patch, but test updates needed
Simon Fraser (smfr)
Comment 5 2012-12-11 18:30:34 PST
Comment on attachment 178942 [details] Patch, but test updates needed I think this patch is correct, but it affects all the layout test results, and I wonder if we should set the root layer's background color on all platforms.
WebKit Review Bot
Comment 6 2012-12-11 20:04:44 PST
Comment on attachment 178942 [details] Patch, but test updates needed Attachment 178942 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/15277406 New failing tests: compositing/geometry/bounds-clipped-composited-child.html compositing/geometry/clip.html compositing/geometry/limit-layer-bounds-positioned.html compositing/geometry/bounds-ignores-hidden-composited-descendant.html compositing/geometry/bounds-ignores-hidden.html compositing/geometry/limit-layer-bounds-clipping-ancestor.html compositing/backing/no-backing-for-clip-overlap.html compositing/bounds-in-flipped-writing-mode.html compositing/geometry/fixed-position-composited-switch.html compositing/geometry/limit-layer-bounds-transformed-overflow.html compositing/iframes/become-overlapped-iframe.html compositing/geometry/foreground-layer.html compositing/absolute-inside-out-of-view-fixed.html compositing/geometry/limit-layer-bounds-overflow-root.html compositing/geometry/limit-layer-bounds-fixed-positioned.html compositing/geometry/layer-due-to-layer-children-deep-switch.html compositing/geometry/ancestor-overflow-change.html compositing/geometry/limit-layer-bounds-positioned-transition.html compositing/geometry/clip-inside.html compositing/geometry/layer-due-to-layer-children-switch.html compositing/geometry/bounds-ignores-hidden-dynamic-negzindex.html compositing/columns/composited-in-paginated.html compositing/iframes/become-composited-nested-iframes.html compositing/geometry/bounds-ignores-hidden-dynamic.html compositing/geometry/limit-layer-bounds-transformed.html compositing/clip-child-by-non-stacking-ancestor.html compositing/geometry/flipped-writing-mode.html compositing/overflow-trumps-transform-style.html compositing/backing/no-backing-for-clip.html compositing/backing/no-backing-for-perspective.html
Simon Fraser (smfr)
Comment 7 2012-12-11 22:05:38 PST
Darin Adler
Comment 8 2012-12-12 09:18:27 PST
Comment on attachment 178963 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=178963&action=review > Source/WebCore/ChangeLog:19 > + (WebCore::clipBox): Remove blank linke. Typo "linke".
Simon Fraser (smfr)
Comment 9 2012-12-12 09:51:23 PST
Comment on attachment 178963 [details] Patch This broke a couple of the new background tests.
Noam Rosenthal
Comment 10 2012-12-12 10:50:40 PST
(In reply to comment #9) > (From update of attachment 178963 [details]) > This broke a couple of the new background tests. > compositing/background-color/background-color-text-change.html failed unexpectedly (reference mismatch) At least this one seems like a legitimate failure, probably from the change to updateBackgroundColor. Let me know if you want me to take a look.
Simon Fraser (smfr)
Comment 11 2012-12-15 11:39:14 PST
Note You need to log in before you can comment on or make changes to this bug.